fix: delete an extra margin on services block in phone version

--- a/style.css
+++ b/style.css
@@ -594,7 +594,7 @@ body {
   }
 
   .service-template {
-    margin: 7.5px auto;
+    margin: 15px auto 0px auto;
     width: 100%;
   }
 
